RESOLVED FIXED79753
RuntimeEnabledFeatures::setMultipleShadowSubtreesEnabled should not be inline
https://bugs.webkit.org/show_bug.cgi?id=79753
Summary RuntimeEnabledFeatures::setMultipleShadowSubtreesEnabled should not be inline
Roland Steiner
Reported 2012-02-27 23:46:34 PST
It's referred in WebCore.exp.in if SHADOW_DOM is enabled, and creates a linker error if inline
Attachments
Patch (2.44 KB, patch)
2012-02-27 23:49 PST, Roland Steiner
no flags
Roland Steiner
Comment 1 2012-02-27 23:49:24 PST
Hayato Ito
Comment 2 2012-02-28 00:07:26 PST
Looks reasonable. Inline should be avoided here because it is used from DumpRenderTree.
Hajime Morrita
Comment 3 2012-02-28 00:18:16 PST
Comment on attachment 129199 [details] Patch Basically we should inline runtime feature accessor for performance reason. But considering this flag will be removed shortly, this is OK for now.
WebKit Review Bot
Comment 4 2012-02-28 01:24:00 PST
Comment on attachment 129199 [details] Patch Clearing flags on attachment: 129199 Committed r109089: <http://trac.webkit.org/changeset/109089>
WebKit Review Bot
Comment 5 2012-02-28 01:24:05 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6 2012-02-28 02:19:45 PST
The commit-queue encountered the following flaky tests while processing attachment 129199 [details]: compositing/reflections/nested-reflection-transformed2.html bug 79743 (author: simon.fraser@apple.com) The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.