RuntimeEnabledFeatures::setMultipleShadowSubtreesEnabled should not be inline https://bugs.webkit.org/show_bug.cgi?id=79753

Moved the function implementation to the .cpp file.

Reviewed by Hajime Morita.

No new tests. (no functional change)

* bindings/generic/RuntimeEnabledFeatures.cpp:
(WebCore::RuntimeEnabledFeatures::setMultipleShadowSubtreesEnabled):
(WebCore):
* bindings/generic/RuntimeEnabledFeatures.h:
(RuntimeEnabledFeatures):


Canonical link: https://commits.webkit.org/96850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109089 268f45cc-cd09-0410-ab3c-d52691b4dbfc